k8s/yml/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: $SERVICE_NAME
  namespace: $KUBE_NAMESPACE
  labels:
    app: $SERVICE_NAME
    pipeline_id: "$CI_PIPELINE_ID"
    build_id: "$CI_JOB_ID"
    tier: web
spec:
  replicas: $replicas
  revisionHistoryLimit: 5
  template:
    metadata:
      name: $SERVICE_NAME
      labels:
        app: $SERVICE_NAME
        tier: web
        track: $CI_ENVIRONMENT_SLUG
    spec:
      imagePullSecrets:
      - name: image-pull-secret
      containers:
      - name: $SERVICE_NAME
        image: $CI_REGISTRY_IMAGE:$CI_REGISTRY_TAG 
        imagePullPolicy: Always
        ports:
        - name: web
          containerPort: $PORT
        livenessProbe:
          httpGet:
            path: /
            port: $PORT
          initialDelaySeconds: 15
          timeoutSeconds: 15
        readinessProbe:
          httpGet:
            path: /
            port: $PORT
          initialDelaySeconds: 5
          timeoutSeconds: 3
