k8s/yml/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: $SERVICE_NAME
  labels:
    app: $SERVICE_NAME
    pipeline_id: "$CI_PIPELINE_ID"
    build_id: "$CI_JOB_ID"
    track: $CI_ENVIRONMENT_SLUG
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: $PORT
  selector:
    app: $SERVICE_NAME
    tier: web
